# CGAN_Magic_Cards

./: .gitignore  README.md  pyproject.toml
BigGAN-PyTorch/: datasets.py  precalc_stats_example.py  sample.py  train.py  train_fns.py  utils.py
BigGAN-PyTorch/classification/models/: densenet.py  wideresnet.py
BigGAN-PyTorch/scripts/: launch_cifar_ema.sh  sample_cifar_ema.sh
BigGAN-PyTorch/scripts/final/: launch_cifar100_baseline.sh  launch_cifar100_mhingegan.sh  launch_cifar_baseline.sh  launch_cifar_mhingegan.sh  launch_stl32_baseline.sh  launch_stl32_mhingegan.sh  launch_stl48_baseline.sh  launch_stl48_mhingegan.sh  sample_cifar100_baseline.sh  sample_cifar100_mhingegan.sh  sample_cifar_baseline.sh  sample_cifar_mhingegan.sh  sample_stl32_baseline.sh  sample_stl32_mhingegan.sh  sample_stl48_baseline.sh  sample_stl48_mhingegan.sh
BigGAN-PyTorch/scripts/utils/: prepare_data.sh
FQ-BigGAN/: BigGAN.py  datasets.py  train.py  train_fns.py  utils.py
FQ-BigGAN/scripts/: launchM256.sh  launch_C10.sh  launch_C100.sh  launch_I64_bs128x4.sh
Simple/: dataset.py  gan.py
Simple/cgan/: cgan.py  dataset.py
Simple/ctgan/: ct_gan.py  models.py
Simple/gan/: gan.py
experiment/: animate.py  dataset.ipynb  display.py
