[tool.poetry]
name = "cgan_magic_cards"
version = "0.1.0"
description = "Conditional Magic The Gathering card generation via FQ-GAN"
authors = ["Emilian Postolache, Sara Kaszuba"]

[tool.poetry.dependencies]
python = "^3.6.9"
ipykernel = "^5.3.4"
torch = "^1.5.1"
imageio = "^2.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
