[tool.poetry]
name = "cgan_magic_cards"
version = "0.1.0"
description = "Conditional Magic The Gathering card generation via FQ-GAN"
authors = ["Emilian Postolache, Sara Kaszuba"]

[tool.poetry.dependencies]
python = "^3.6.9"
ipykernel = "^5.3.4"
torch = "^1.5.1"
imageio = "^2.9.0"
tqdm = "^4.48.0"
torchvision = "^0.6.1"
scipy = "^1.5.2"
h5py = "^2.10.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
